[project]
name = "poststorm"
version = "0.1.0"
description = "Lockbox-to-Ledger — scanned EOBs to a reconciled recoupment ledger on Cerebras + Gemma-4"
requires-python = ">=3.12"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle essentials, I = import sorting, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP042"]  # long lines OK in dense tables; str+Enum is intentional (pydantic-friendly)

[tool.ruff.lint.per-file-ignores]
# Dense raster-layout toolkit: compact one-liners (semicolons) + short coords are intentional.
"generator/*" = ["E741", "E702"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI DI defaults (Depends/Header/Query/Path) are the idiomatic pattern, not B008 bugs.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query", "fastapi.Path"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
